--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@mui/icons-material": "^5.15.11",
     "@mui/joy": "^5.0.0-beta.29",
     "@mui/material": "^5.15.10",
+    "@mui/x-charts": "^6.19.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
