--- a/backend/package.json
+++ b/backend/package.json
@@ -1,16 +1,19 @@
 {
-  "dependencies": {
-    "@google/generative-ai": "^0.2.1",
-    "bcrypt": "^5.1.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.1",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.1.1",
-    "morgan": "^1.10.0",
-    "nodemon": "^3.0.3"
-  },
-  "scripts": {
-    "start": "nodemon server.js"
-  }
+	"dependencies": {
+		"@google/generative-ai": "^0.2.1",
+		"@langchain/community": "^0.0.44",
+		"@langchain/exa": "^0.0.3",
+		"@langchain/google-genai": "^0.0.10",
+		"bcrypt": "^5.1.1",
+		"cors": "^2.8.5",
+		"dotenv": "^16.4.1",
+		"express": "^4.18.2",
+		"jsonwebtoken": "^9.0.2",
+		"mongoose": "^8.1.1",
+		"morgan": "^1.10.0",
+		"nodemon": "^3.0.3"
+	},
+	"scripts": {
+		"start": "nodemon server.js"
+	}
 }
