--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
+    "draft-js": "^0.11.7",
     "exa-js": "^1.0.12",
+    "froala-editor": "^4.2.0",
     "marked": "^12.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
+    "react-froala-wysiwyg": "^4.2.0",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
