--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@mdxeditor/editor": "^2.20.1",
     "@mui/icons-material": "^5.15.15",
     "@mui/joy": "^5.0.0-beta.29",
     "@mui/material": "^5.15.12",
@@ -22,6 +23,7 @@
     "react-draft-wysiwyg": "^1.15.0",
     "react-froala-wysiwyg": "^4.2.0",
     "react-markdown": "^9.0.1",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
